-company page issue fixed -mission vission safari issue fixed

--- a/about.css
+++ b/about.css
@@ -674,6 +674,13 @@ button {
     display: flex;
     width: 100%;
     border-right: none !important;
+    -ms-border-right: none !important;
+    -webkit-border-right: none !important;
+    /* border-style: none;
+    border-width: 0px;
+    border-color: transparent; */
+    border-image: none !important;
+
   }
   .mission-vission-bg .container .mission-vission-container .vission-data{
     padding: 0 !important;
